--- a/clone-front/package.json
+++ b/clone-front/package.json
@@ -5,15 +5,20 @@
   "dependencies": {
     "animsition": "^4.0.2",
     "chart.js": "^2.8.0",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.25",
     "react": "^16.8.6",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
     "react-dom-factories": "^1.0.2",
+    "react-js-pagination": "^3.0.2",
+    "react-moment": "^0.9.2",
     "react-redux": "^7.0.2",
     "react-redux-notify": "^4.1.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-selectize": "^3.0.1",
+    "react-slide-toggle": "^0.2.5",
     "react-transition-group": "^1.2.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
