another day into it

--- a/clone-front/package.json
+++ b/clone-front/package.json
@@ -17,7 +17,7 @@
     "react-redux-notify": "^4.1.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
-    "react-selectize": "^3.0.1",
+    "react-select": "^2.4.3",
     "react-slide-toggle": "^0.2.5",
     "react-transition-group": "^1.2.1",
     "redux": "^4.0.1",
