--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aniso8601==6.0.0
 async-timeout==3.0.1
 attrs==19.1.0
 Babel==2.6.0
+backcall==0.1.0
 bcrypt==3.1.6
 bittrex-websocket-aio==0.0.0.3.0
 blinker==1.4
@@ -11,6 +12,9 @@ certifi==2019.3.9
 cffi==1.12.2
 chardet==3.0.4
 Click==7.0
+colorama==0.4.1
+decorator==4.4.0
+emoji==0.5.2
 Flask==1.0.2
 Flask-BabelEx==0.9.3
 Flask-JWT-Extended==3.18.1
@@ -23,16 +27,24 @@ Flask-Security==3.0.0
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 idna==2.8
+ipython==7.5.0
+ipython-genutils==0.2.0
 itsdangerous==1.1.0
+jedi==0.13.3
 Jinja2==2.10.1
 Mako==1.0.9
 MarkupSafe==1.1.1
 multidict==4.5.2
 mysqlclient==1.4.1
+parso==0.4.0
 passlib==1.7.1
+pickleshare==0.7.5
+prompt-toolkit==2.0.9
+psutil==5.6.2
 pyaes==1.6.1
 pyasn1==0.4.5
 pycparser==2.19
+Pygments==2.4.0
 PyJWT==1.7.1
 python-bittrex==0.3.0
 python-dateutil==2.8.0
@@ -46,7 +58,9 @@ six==1.12.0
 speaklater==1.3
 SQLAlchemy==1.3.2
 Telethon==1.6.2
+traitlets==4.3.2
 urllib3==1.24.1
+wcwidth==0.1.7
 websockets==7.0
 Werkzeug==0.15.2
 wincertstore==0.2
