--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ Flask-Migrate==2.4.0
 Flask-Principal==0.4.0
 Flask-RESTful==0.3.7
 Flask-Security==3.0.0
+Flask-Seeder==0.1a2
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 idna==2.8
